# pico-renderer

./: .clang-tidy  .gitattributes  .gitignore  .orthodoxy.yml  AGENT_TEAMS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  WORKFLOW.md
.claude/: ownership.json  settings.json
.claude/agents/: infra-tooling.md  integrator.md  on-target-runner.md  perf-profiler.md  renderer-module-owner.md  renderer-reviewer.md
.claude/hooks/: destructive_guard.sh  format_check.sh  idle_gate.sh  task_complete_gate.sh  task_schema.sh
.claude/skills/contract-first/: SKILL.md
.claude/skills/fixed-point/: SKILL.md
.claude/skills/golden-image-test/: SKILL.md
.claude/skills/on-target-probe/: SKILL.md
.claude/skills/orthodox-tdd-cycle/: SKILL.md
.claude/skills/renderer-module-scaffold/: SKILL.md
.claude/skills/wave-retro/: SKILL.md
.claude/skills/worktree-pr/: SKILL.md
.github/actions/setup-arm-toolchain/: action.yml
.github/workflows/: ci.yml  sanitize.yml
cmake/: Dependencies.cmake  Orthodoxy.cmake  PicoTidy.cmake  Profiler.cmake  Sanitizers.cmake  StaticAnalysis.cmake  StripOrthodoxyPlugin.cmake
docs/: PROFILE-OPAQUE-REPORT.md  REFERENCES.md  setup-llvm.md
docs/superpowers/plans/: 2026-05-27-foundation-bootstrap-and-wave1.md  2026-06-03-waveE-rlane-t0.md
docs/superpowers/specs/: 2026-05-26-command-buffer-renderer-design.md  2026-05-27-agent-team-implementation-plan-design.md  hardware-measurements.md
src/: CMakeLists.txt  main_pico.cc  main_sdl.cc
src/aa/: CMakeLists.txt  aa.cc  aa.h
src/app/: CMakeLists.txt  app.cc  app.h
src/arena/: CMakeLists.txt  arena.cc  arena.h
src/blend/: CMakeLists.txt  blend.cc  blend.h
src/blit2d/: CMakeLists.txt  blit2d.cc  blit2d.h
src/clip/: CMakeLists.txt  clip.cc  clip.h
src/cmd/: CMakeLists.txt  cmd.cc  cmd.h
src/demo/: CMakeLists.txt  camera_path_gen.h  debug_terrain_gen.h  demo_scene.cc  demo_scene.h  gen_camera_path.py  gen_debug_terrain.py  main.cc
src/demo/assets/terrain/: terrain_atlas.h  terrain_cloud.h  terrain_detail.h  terrain_grid_idx.h  terrain_grid_vtx.h  terrain_panorama.h  terrain_scenery.h  terrain_tex_t000.h  terrain_tex_t001.h  terrain_tex_t002.h  terrain_tex_t003.h  terrain_tex_t004.h  terrain_tex_t005.h  terrain_tex_t006.h  terrain_tex_t007.h  terrain_tex_t008.h  terrain_tex_t009.h  terrain_tex_t010.h  terrain_tex_t011.h  terrain_tex_t012.h  terrain_tex_t013.h  terrain_tex_t014.h  terrain_tex_t015.h  terrain_tex_t016.h  terrain_tex_t017.h  terrain_tex_t018.h  terrain_tex_t019.h  terrain_tex_t020.h  terrain_tex_t021.h  terrain_tex_t022.h  terrain_tex_t023.h  terrain_tex_t024.h  terrain_tex_t025.h  terrain_tex_t026.h  terrain_tex_t027.h  terrain_tex_t028.h  terrain_tex_t029.h  terrain_tex_t030.h  terrain_tex_t031.h  terrain_tex_t032.h  (+99 more)
src/fixed/: CMakeLists.txt  fixed.cc  fixed.h
src/game/: CMakeLists.txt  rng.cc  rng.h
src/geom/: CMakeLists.txt  geom.cc  geom.h
src/gfx/: CMakeLists.txt  assets_gen.cc  assets_gen.h  blit.cc  blit.h  font.cc  font.h  framebuffer.h  sprite.h
src/platform/: CMakeLists.txt  display.h  display_host.cc  platform.h  platform_pico.cc  platform_sdl.cc  reset_stub.h  reset_stub_host.cc  reset_stub_pico.cc  scanrace.cc  scanrace.h  screen.pio
src/prof/: CMakeLists.txt  prof.cc  prof.h  prof_host.cc  prof_pico.cc
src/raster/: CMakeLists.txt  interp.h  raster.cc  raster.h
src/rdr/: CMakeLists.txt  config.h  frame.h  rdr.cc  rdr.h  sram.h  types.h
src/sched/: CMakeLists.txt  dispatch.h  dispatch_host.cc  dispatch_pico.cc  drain.h  sched.cc  sched.h
src/shade/: CMakeLists.txt  shade.cc  shade.h
src/tex/: CMakeLists.txt  tex.cc  tex.h
tests/: CMakeLists.txt  smoke_test.cc
tests/aa/: CMakeLists.txt  aa_test.cc
tests/app/: CMakeLists.txt  app_test.cc
tests/arena/: CMakeLists.txt  arena_test.cc
tests/blend/: CMakeLists.txt  blend_test.cc
tests/blit2d/: CMakeLists.txt  blit2d_test.cc
tests/clip/: CMakeLists.txt  clip_test.cc
tests/cmd/: CMakeLists.txt  cmd_test.cc
tests/demo/: CMakeLists.txt  demo_scene_test.cc
tests/fixed/: CMakeLists.txt  fixed_test.cc
tests/game/: CMakeLists.txt  rng_test.cc
tests/geom/: CMakeLists.txt  geom_test.cc
tests/gfx/: CMakeLists.txt  assets_test.cc  blit_test.cc  font_test.cc
tests/harness/: CMakeLists.txt  golden.cc  golden.h  golden_test.cc  inspector.cc  inspector.h  inspector_main.cc  oracle.cc  oracle.h  oracle_blend.cc  oracle_coverage.cc  oracle_fog.cc  oracle_shade.cc  oracle_test.cc  oracle_texel.cc  png_io.cc  png_io.h  png_io_test.cc
tests/hooks/: test_destructive_guard.sh  test_discard_spike.sh  test_task_schema.sh
tests/orthodoxy_canary/: CMakeLists.txt  canary.cc
tests/platform/: CMakeLists.txt  rgb565_test.cc  scanrace_test.cc
tests/raster/: CMakeLists.txt  raster_test.cc
tests/rdr/: CMakeLists.txt  rdr_test.cc
tests/sched/: CMakeLists.txt  sched_test.cc
tests/shade/: CMakeLists.txt  shade_test.cc
tests/tex/: CMakeLists.txt  tex_test.cc
tools/: asset_convert.py  asset_tool.py  asset_tool_test.py  ci_main.sh  discard_spike.sh  gen_assets.py  lsan.supp  rename_project.sh  run_on_target.py  run_on_target_test.py  ubsan.ignorelist  verify_stream_branch.sh  verify_toolchain.sh
tools/assets/: demo_tex_565.c  demo_tex_565.h
